[tool.poetry]
name = "proyectomodelos"
version = "0.1.0"
description = ""
authors = ["atapasco <atapasco@unicesar.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pyside2 = "^5.15.2.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
